--- a/config/config.env
+++ b/config/config.env
@@ -1,4 +1,4 @@
 PORT = 3000
-MONGO_URI = mongodb+srv://dalanc1234:dalanc1234@cluster0.hf58p.mongodb.net/storybooks?retryWrites=true&w=majority
-GOOGLE_CLIENT_ID = 326508842867-7brom4jqp91vibto39tuq2mads4sgich.apps.googleusercontent.com
-GOOGLE_CLIENT_SECRET = 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
+MONGO_URI = *
+GOOGLE_CLIENT_ID = *
+GOOGLE_CLIENT_SECRET = *
